# flowcompare

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: reproduction.md  theory.md
flowcompare/: __init__.py  checkpoint.py  sampling.py  tokenizer.py
flowcompare/data/: __init__.py  collate.py  fasta.py  synthetic.py
flowcompare/eval/: __init__.py  diversity.py  esm.py  esmfold.py  novelty.py  pareto.py  perplexity.py
flowcompare/models/: __init__.py  transformer.py
flowcompare/processes/: __init__.py  base.py  bfn.py  dfm.py  identity.py
flowcompare/scripts/: __init__.py  common.py  eval.py  sample.py  train.py
flowcompare/training/: __init__.py  schedules.py  trainer.py
tests/: test_bfn_math.py  test_bfn_parity.py  test_checkpoint_and_scripts.py  test_data.py  test_dfm_math.py  test_eval.py  test_process_interface.py  test_sampling.py  test_tokenizer.py  test_training.py  test_transformer.py
